# Monsteriser_monster_generator

./: .gitignore  README.MD  main.py  pyproject.toml  requirements.txt
data/5E/: baseline_stats.csv  gear.json
src/: config.py
src/monsteriser_monster_generator/: __init__.py  main.py
src/monsteriser_monster_generator/monsterizer_dataclasses/: 5e_dataclasses.py  dataclass_exceptions.py  dnd5e_dataclasses.py
src/monsteriser_monster_generator/monsterizer_dataclasses/dnd_5e/: action_catalog.py  action_selection.py  action_template.py  actions.py  base_monster.py  gear.py  model_types.py
src/monsteriser_monster_generator/monsterizer_dataclasses/dnd_5e/actions/: attacks.py  base.py  effects.py  spellcasting.py
src/monsteriser_monster_generator/nicegui_formatting/: theme_main.py
src/monsteriser_monster_generator/pages/: start_page.py
src/monsteriser_monster_generator/systems/: __init__.py
src/monsteriser_monster_generator/systems/dnd5e/: __init__.py
src/monsteriser_monster_generator/systems/dnd5e/calculations/: __init__.py  combat_routines.py  damage.py
src/monsteriser_monster_generator/systems/dnd5e/catalogs/: __init__.py  action_catalog.py  action_template.py
src/monsteriser_monster_generator/systems/dnd5e/data/: baseline_stats.csv  gear.json
src/monsteriser_monster_generator/systems/dnd5e/models/: __init__.py  base_monster.py  damage_adjustments.py  gear.py  model_types.py  monster_types.py
src/monsteriser_monster_generator/systems/dnd5e/models/actions/: __init__.py  attacks.py  effects.py  multiattack.py  usage.py
src/monsteriser_monster_generator/systems/dnd5e/services/: __init__.py  action_selection.py  multiattack_validation.py
src/monsteriser_monster_generator/utility_scripts/: dnd5e_cr_calculations.py
src/monsterizer_dataclasses/: 5e_dataclasses.py  monsteriser_dataclasses.py
src/nicegui_formatting/: theme_main.py
src/pages/: start_page.py
tests/systems/dnd5e/calculations/: test_action_damage.py  test_combat_routines.py  test_damage.py  test_limited_usage.py  test_multiattack_damage.py  test_turn_damage.py
tests/systems/dnd5e/models/: test_base_monster.py
tests/systems/dnd5e/models/actions/: test_multiattack.py
tests/systems/dnd5e/services/: test_multiattack_validation.py
