[project]
name = "monsteriser-monster-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dataclasses>=0.6",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "nicegui>=3.7.1",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "pytest>=8.3.5",
    "ruff>=0.15.2",
]
